# python-terraform-provider-poc

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  cdktf.json  hello.py  pyproject.toml  requirements.txt  template.dockerfile
modules/api/: main.tf  outputs.tf  variables.tf
modules/cloudrun/: main.tf  outputs.tf  variables.tf
modules/policy/: main.tf  variables.tf
modules/queue/: main.tf  outputs.tf  variables.tf
modules/roles/: main.tf  output.tf  variables.tf
modules/secret/: main.tf  variables.tf
modules/secrets/: main.tf  outputs.tf
modules/stack/: main.tf  outputs.tf  variables.tf
modules/storage/: main.tf  outputs.tf  variables.tf
provider/: main.py
provider/deploy/: api.py  server.py  stack.py
runtime/: Dockerfile  go.mod  go.sum
runtime/cmd/: main.go
